--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "in-person",
   "version": "0.0.0",
   "engines": {
-    "node": "12.x"
+    "node": "13.x",
+    "npm":"6.14.4"
   },
   "main": "server.js",
   "scripts": {
@@ -14,7 +15,6 @@
   },
   "private": true,
   "dependencies": {
-    "ejs": "~1.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "https": "^1.0.0",
