--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,8 @@ speed-measure-plugin*.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.history/*
+.history
+package-lock.json/*
 
 # misc
 /.sass-cache
