--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "http": "0.0.1-security",
     "https": "^1.0.0",
     "path": "^0.12.7",
     "socket.io": "^2.3.0"
